# socrata-mcp

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-07-10-socrata-mcp-mvp.md
docs/superpowers/plans/: 2026-07-10-report-tool.md
docs/superpowers/specs/: 2026-07-10-report-tool-design.md
socrata_mcp/: __init__.py  __main__.py  cache.py  config.py  errors.py  export.py  http_client.py  profile.py  report.py  report_cli.py  report_html.py  server.py  soql.py
socrata_mcp/mcp/: app.py  tools.py
socrata_mcp/providers/: base.py  socrata.py
tests/: conftest.py  test_cache.py  test_config.py  test_export.py  test_http_client.py  test_live_smoke.py  test_profile.py  test_provider.py  test_report.py  test_report_cli.py  test_report_html.py  test_soql.py  test_tools.py
